@@ -18,6 +18,13 @@
 		Section Text.
 	</x:section>
 
-	<:foo>Test</:foo>
+	<svg xmlns="http://www.w3.org/2000/svg">
+		<path>
+			123
+			<clip xmlns="http://example.com/clip">456</clip>
+		</path>
+	</svg>
+	<picture><img /></picture>
+
 	</body>
 </html>
